package de.auinger.training.java_basics.exercise12;

public class SparKonto extends Konto {

    public SparKonto(String kontoNummer) {
        super(kontoNummer);
    }

}
